--- a/roles/falcon_install/tasks/auth.yml
+++ b/roles/falcon_install/tasks/auth.yml
@@ -14,6 +14,7 @@
   register: falcon_api_oauth2_token
   no_log: "{{ falcon_api_enable_no_log }}"
   run_once: yes
+  delegate_to: localhost
 
 - name: CrowdStrike Falcon | Auto-discover CrowdStrike Cloud Region
   ansible.builtin.set_fact:
@@ -22,18 +23,22 @@
     - falcon_cloud_autodiscover
     - falcon_api_oauth2_token.x_cs_region | length > 0
 
-- name: CrowdStrike Falcon | Detect Target CID Based on Credentials
-  ansible.builtin.uri:
-    url: https://{{ falcon_cloud }}/sensors/queries/installers/ccid/v1
-    method: GET
-    return_content: true
-    headers:
-      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-      Content-Type: application/json
-  register: falcon_api_target_cid
-  no_log: "{{ falcon_api_enable_no_log }}"
-  run_once: yes
+- name: Set falcon_cid Block
+  when: not falcon_cid
+  block:
+  - name: CrowdStrike Falcon | Detect Target CID Based on Credentials
+    ansible.builtin.uri:
+      url: https://{{ falcon_cloud }}/sensors/queries/installers/ccid/v1
+      method: GET
+      return_content: true
+      headers:
+        authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+        Content-Type: application/json
+    register: falcon_api_target_cid
+    no_log: "{{ falcon_api_enable_no_log }}"
+    run_once: yes
+    delegate_to: localhost
 
-- name: CrowdStrike Falcon | Set CID received from API
-  ansible.builtin.set_fact:
-    falcon_cid: "{{ falcon_api_target_cid.json.resources[0] }}"
+  - name: CrowdStrike Falcon | Set CID received from API
+    ansible.builtin.set_fact:
+      falcon_cid: "{{ falcon_api_target_cid.json.resources[0] }}"
