--- a/roles/falcon_install/tasks/main.yml
+++ b/roles/falcon_install/tasks/main.yml
@@ -18,6 +18,8 @@
     - falcon_install_method == "api"
     - ansible_os_family != "Windows"
   block:
+    - ansible.builtin.include_tasks: auth.yml
+      # noqa name[missing]
     - ansible.builtin.include_tasks: api.yml
       # noqa name[missing]
 
@@ -33,6 +35,8 @@
     - falcon_install_method == "api"
     - ansible_os_family == "Windows"
   block:
+    - ansible.builtin.include_tasks: auth.yml
+      # noqa name[missing]
     - ansible.builtin.include_tasks: win_api.yml
       # noqa name[missing]
 
