--- a/molecule/falcon_configure/verify.yml
+++ b/molecule/falcon_configure/verify.yml
@@ -3,6 +3,7 @@
 
 - name: Verify
   hosts: all
+  become: yes
   tasks:
   - name: Get list of Falcon Sensor Options
     crowdstrike.falcon.falconctl_info:
@@ -11,7 +12,6 @@
   - name: Verify Falcon Sensor options are set
     ansible.builtin.assert:
       that:
-        - info.falconctl_info.aid
         - info.falconctl_info.cid
         - info.falconctl_info.billing
         - info.falconctl_info.tags
@@ -52,26 +52,29 @@
       falcon_aph: ""
       falcon_app: ""
 
-  - name: Test Deleting AID master image prep
-    ansible.builtin.include_role:
-      name: crowdstrike.falcon.falcon_configure
-    vars:
-      falcon_option_set: no
-      falcon_remove_aid: yes
+  - name: AID deletion block
+    when: info.falconctl_info.aid
+    block:
+      - name: Test Deleting AID master image prep
+        ansible.builtin.include_role:
+          name: crowdstrike.falcon.falcon_configure
+        vars:
+          falcon_option_set: no
+          falcon_remove_aid: yes
 
-  - name: Get Updated Falcon Sensor Option
-    crowdstrike.falcon.falconctl_info:
-    register: delete_info
+      - name: Get Updated Falcon Sensor Option
+        crowdstrike.falcon.falconctl_info:
+        register: delete_info
 
-  - name: Verify Falcon Sensor options are not set
-    ansible.builtin.assert:
-      that:
-        - not delete_info.falconctl_info.aid
-        - not delete_info.falconctl_info.cid
-        - not delete_info.falconctl_info.tags
-        - not delete_info.falconctl_info.apd
-        - not delete_info.falconctl_info.aph
-        - not delete_info.falconctl_info.app
+      - name: Verify Falcon Sensor options are not set
+        ansible.builtin.assert:
+          that:
+            - not delete_info.falconctl_info.aid
+            - not delete_info.falconctl_info.cid
+            - not delete_info.falconctl_info.tags
+            - not delete_info.falconctl_info.apd
+            - not delete_info.falconctl_info.aph
+            - not delete_info.falconctl_info.app
 
   - name: Test auto-detecting CID
     ansible.builtin.include_role:
