--- a/molecule/falcon_uninstall/verify.yml
+++ b/molecule/falcon_uninstall/verify.yml
@@ -3,6 +3,7 @@
 
 - name: Verify
   hosts: all
+  become: yes
   tasks:
   - name: Get list of installed packages
     ansible.builtin.package_facts:
