--- a/molecule/win_falcon_install/converge.yml
+++ b/molecule/win_falcon_install/converge.yml
@@ -1,8 +1,16 @@
 ---
 - name: Converge
   hosts: all
-  vars:
-    falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
-    falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
-  roles:
-    - role: crowdstrike.falcon.falcon_install
+  tasks:
+    - name: Set ProvToken info (if applicable)
+      set_fact:
+        windows_install_args: "/norestart ProvToken={{ lookup('env', 'FALCON_PROV_TOKEN') }}"
+      when: lookup('env', 'FALCON_PROV_TOKEN')
+
+    - name: Install Falcon Sensor
+      ansible.builtin.include_role:
+        name: crowdstrike.falcon.falcon_install
+      vars:
+        falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
+        falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
+        falcon_windows_install_args: "{{ windows_install_args if windows_install_args is defined else '/norestart' }}"
