--- a/roles/falcon_uninstall/tasks/main.yml
+++ b/roles/falcon_uninstall/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for falcon_uninstall
 - name: Linux Block
   when:
-    - ansible_os_family != "Windows"
+    - ansible_facts['os_family'] != "Windows"
   become: true
   become_user: root
   block:
@@ -11,7 +11,7 @@
 
 - name: Windows Block
   when:
-    - ansible_os_family == "Windows"
+    - ansible_facts['os_family'] == "Windows"
   become: true
   become_method: "{{ falcon_windows_become_method }}"
   become_user: "{{ falcon_windows_become_user }}"
