--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -86,6 +86,15 @@ jobs:
           - falcon_install
           - falcon_install_policy
           - falcon_install_allow_downgrade
+        exclude:
+          # Exclude until more sensor versions are available
+          - molecule:
+              distro: amazon-2023
+              image_owner: '137112412989'
+              image_arch: x86_64
+              image_name: al2023-ami-2023*
+              instance_type: t2.micro
+            collection_role: falcon_install_allow_downgrade
     steps:
       - name: Check out code
         uses: actions/checkout@v3
