feat: add toggle for become on windows

--- a/roles/falcon_configure/defaults/main.yml
+++ b/roles/falcon_configure/defaults/main.yml
@@ -114,6 +114,11 @@ falcon_tags:
 #
 falcon_backend:
 
+# Ansible become toggle for Windows systems.
+# The default is true
+#
+falcon_windows_become: true
+
 # Ansible become method for Windows systems.
 # The default is runas
 #
