--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -39,7 +39,7 @@
 - name: Windows block
   when:
     - ansible_facts['os_family'] == "Windows"
-  become: true
+  become: "{{ falcon_windows_become }}"
   become_method: "{{ falcon_windows_become_method }}"
   become_user: "{{ falcon_windows_become_user }}"
   block:
