--- a/roles/falcon_install/defaults/main.yml
+++ b/roles/falcon_install/defaults/main.yml
@@ -174,6 +174,11 @@ falcon_windows_install_args: "/norestart"
 #
 falcon_windows_uninstall_args: "/norestart"
 
+# Ansible become toggle for Windows systems.
+# The default is true
+#
+falcon_windows_become: true
+
 # Ansible become method for Windows systems.
 # The default is runas
 #
