--- a/roles/falcon_uninstall/defaults/main.yml
+++ b/roles/falcon_uninstall/defaults/main.yml
@@ -34,6 +34,11 @@ falcon_remove_host: false
 #
 falcon_windows_uninstall_args: "/norestart"
 
+# Ansible become toggle for Windows systems.
+# The default is true
+#
+falcon_windows_become: true
+
 # Ansible become method for Windows systems.
 # The default is runas
 #
