--- a/roles/falcon_uninstall/tasks/main.yml
+++ b/roles/falcon_uninstall/tasks/main.yml
@@ -35,7 +35,7 @@
 - name: Windows Block
   when:
     - ansible_facts['os_family'] == "Windows"
-  become: true
+  become: "{{ falcon_windows_become }}"
   become_method: "{{ falcon_windows_become_method }}"
   become_user: "{{ falcon_windows_become_user }}"
   block:
