--- a/roles/falcon_uninstall/tasks/remove_host_pretasks.yml
+++ b/roles/falcon_uninstall/tasks/remove_host_pretasks.yml
@@ -27,7 +27,7 @@
 - name: "CrowdStrike Falcon | Windows AID Block"
   when:
     - ansible_facts['os_family'] == "Windows"
-  become: true
+  become: "{{ falcon_windows_become }}"
   become_method: "{{ falcon_windows_become_method }}"
   become_user: "{{ falcon_windows_become_user }}"
   block:
